--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.google.android.gms:play-services-ads:7.8.0'
-    compile 'jp.satorufujiwara:exoplayer-textureview:0.6.9'
+    compile 'com.jakewharton:butterknife:6.1.0'
     compile project(':googlemediaframework')
+    compile project(':player')
 }
